--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -6,17 +6,12 @@
         <meta name="description" content="このページは5章の課題です。">
     </head>
     <body>
-        <header>
-            <h1>私の趣味</h1>
-        </header>
-        <main>
-            <p>私は中学時代にサッカーを始めました。<br>
-                現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。
-            </p>
-            <img src="C:\Users\shige\OneDrive\ドキュメント\kadai_005\sample.jpg" alt="ロゴ">
-        </main>
-        <footer>
-            <a href="https://twitter.com/samuraijuku">私のプロフィールはこちら</a>
-        </footer>
+        <h1>私の趣味</h1>
+        <p>私は中学時代にサッカーを始めました。<br>
+            現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。
+        </p>
+        <img src="https://github.com/YellowAndDuck/kadai_005/blob/main/kadai_005/sample.jpg?raw=true" alt="ロゴ">
+        <br>
+        <a href="https://twitter.com/samuraijuku">私のプロフィールはこちら</a>
     </body>
 </html>
