--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -10,7 +10,7 @@
         <p>私は中学時代にサッカーを始めました。<br>
             現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。
         </p>
-        <img src="https://github.com/YellowAndDuck/kadai_005/blob/main/kadai_005/sample.jpg?raw=true" alt="ロゴ">
+        <img src="../kadai_005/sample.jpg" alt="ロゴ">
         <br>
         <a href="https://twitter.com/samuraijuku">私のプロフィールはこちら</a>
     </body>
